# embedding_pipeline_demo

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
autotune_retriver/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
workflow/: celery_tasks.py  models.py  retriever_model.py  urls.py  views.py
workflow/management/commands/: list_urls.py
workflow/migrations/: 0001_initial.py  0002_negativeminingresult_model_checkpoint_and_more.py  0003_alter_negativeminingresult_task_id.py  0004_retrievalmodel_and_more.py
